# base_api

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini
.github/workflows/: feature-branch-workflow.yml
app/: alembic.ini  app.py  config.py
app/api/: app.py
app/api/routers/: auth.py  literals.py  users.py
app/api/schemas/: auth.py  users.py
app/api/security/: authentication.py  authorization.py  checks.py  password.py
app/api/security/permissions/: permissions.csv  roles.csv
app/database/: db.py  models.py  users.py
app/database/alembic/: env.py
app/database/alembic/versions/: 202407261436_initial_migration.py  202408211008_add_new_columns_to_users_table.py  202408211048_add_unique_constraints_to_users_table.py  202408221144_add_roles_and_permissions_table.py  202408261646_permissions_role_id_foreign_key_is_not_.py  202408261735_add_role_id_column_to_users_table.py  202408292335_change_role_id_column_is_not_null.py
app/database/dao/: __init__.py  base.py  permissions.py  roles.py  users.py
app/database/errors/: __init__.py  messages.py
app/scripts/python/: postgres_is_ready.py  update_roles_and_permissions.py
app/service/errors/: __init__.py  messages.py
app/service/services/: auth.py  helpers.py  users.py
app/service/unit_of_work/: __init__.py  uow.py
dockerfiles/: dockerfile.python-poetry.3.12-1.4.0
tests/: conftest.py
tests/api/: conftest.py
tests/api/endpoints/auth/: test_auth.py  test_auth_bad.py
tests/api/endpoints/users/administrator_role/: test_users_with_administrator_role.py  test_users_with_administrator_role_bad.py
tests/api/endpoints/users/user_role/: test_users_with_user_role.py  test_users_with_user_role_bad.py
tests/database/: conftest.py  test_dao_users.py  test_db.py  utils.py
tests/unit/: test_jwttoken.py
