[tool.poetry]
name = "myfirstapi"
version = "0.1.0"
description = "My first project"
authors = ["Burado Sunitoka <sosakichat@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.3"
requests = "2.31.0"
httpie = "^3.2.3"
httpx = "^0.27.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
