[tool.poetry]
name = "myfirstapi"
version = "0.1.0"
description = "My first project"
authors = ["Burado Sunitoka <sosakichat@outlook.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.3"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pydantic = "^2.9.1"
pyjwt = "^2.9.0"
pydantic-settings = "^2.4.0"
tenacity = "^9.0.0"
requests = "^2.32.3"
bcrypt = "^4.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
black = "^24.8.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
